src/test/ui/macros/macro-tt-matchers.stderr
error: compilation successful
  --> $DIR/macro-tt-matchers.rs:21:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

